--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ apify>=2.0.0
 # HTTP client
 httpx>=0.27.0
 
-# AI Platform SDKs
+# Browser automation (for scraping AI platforms)
+playwright>=1.40.0
+
+# AI Platform SDKs (for analysis only - user needs one key)
 openai>=1.0.0
 anthropic>=0.40.0
 google-genai>=1.0.0
