--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,14 @@ apify>=2.0.0
 # HTTP client
 httpx>=0.27.0
 
-# Browser automation (for scraping AI platforms)
+# Browser automation
 playwright>=1.40.0
 playwright-stealth>=1.0.0
 
-# AI Platform SDKs (for analysis only - user needs one key)
+# AI SDKs (for analysis)
+google-generativeai>=0.3.0
 openai>=1.0.0
 anthropic>=0.40.0
-google-genai>=1.0.0
 
 # Data validation
 pydantic>=2.0.0
-
-# Testing
-pytest>=8.0.0
