--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@ httpx>=0.27.0
 playwright>=1.40.0
 playwright-stealth>=1.0.0
 
-# AI SDKs (for analysis)
-google-generativeai>=0.3.0
-openai>=1.0.0
+# AI SDKs (for analysis - only Anthropic needed now)
 anthropic>=0.40.0
+
+# Environment variables (for local development)
+python-dotenv>=1.0.0
 
 # Data validation
 pydantic>=2.0.0
